# rust-gql

./: .env  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_user_table.rs
src/: main.rs  schema.rs  server.rs
src/entities/: user.rs
src/user/: graphql.rs
src/user/graphql/: mutation.rs  query.rs  types.rs
