[package]
name = "rust-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-graphql-warp = "4.0"
async-graphql = "4.0"
warp = { version = "0.3.2", default-features = false }
serde_json = "1.0"
http = "0.2"
